# PDLTools

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTIONS.md  LEGAL.txt  README.md  anonymization_8sql__in.html  array__utilities_8sql__in.html  balance__dataset_8sql__in.html  changelog.html  changelog_8dox.html  complete__linkage_8sql__in.html  complex__type_8sql__in.html  dir_00be163c3d13e914c0c2806a3cbc2213.html  dir_0a7162084d1406c3870bc81c149cacfe.html  dir_0cd97984ab6691101e509370741788fa.html  dir_1251a346ff152043611f50f52c1889fb.html  dir_128ed70b7a688215f05b7dfe4688c0ff.html  dir_1337e12e6445032d0e37ed6b0a67b384.html  dir_16c9bb4551060850a43d2544f901f0ed.html  dir_18525ace34050546f4b157950b5bb031.html  dir_1e84b19aaddf3da6aaf43b56780aab9a.html  dir_2249476a371605bca4832b1cdc23ca26.html  dir_294f0fe3988988610cf731614b9c5e17.html  dir_2ac2b76bd516bfb21f7a4fc66b244576.html  dir_3bb6e39557c2b5e20710484cdef7616e.html  dir_40860cd30ae5880208987dc1952e5d36.html  dir_4e1d99163270435842a0330f48044cbd.html  dir_50bc1c7fb4e9101fc9f2ebe1bae75030.html  dir_52832d6fa7ea8aeea8a81c1c0598397a.html  dir_52cafd0f505e5898d4e04b7c2254f4ab.html  dir_634f2930b3ca2b8a096f4ef6f9d7c4e2.html  dir_6579996ece906c16990cfb55bdd8b1ed.html  dir_73ecc95d158d55562ae1da5487e38890.html  dir_783254366f4ba160929c2c2373b13eca.html  dir_7d1f042ba3db2f8a353bdf518b95a259.html  dir_88087cfab9ee66483ddc5d60222390d5.html  dir_9851ab9f897a620abf931f5c8b87470e.html  dir_98a2b1bd64961bf947715ad70607b4a9.html  dir_9dacf3b6354aff68225a9b7136043ac6.html  (+172 more)
cmake/: CMakeCache.txt  (+3 more)
deploy/: CMakeLists.txt  description.txt  dstools.spec.in  hawq_install  pdltools.spec.in  postflight.sh  preflight.sh  rpm_post.sh
deploy/PGXN/: CMakeLists.txt  META.json.in  generate_package.sh.in  zipignore.in
deploy/PackageMaker/: CMakeLists.txt  Welcome.html
deploy/RPM/: CMakeLists.txt
deploy/gppkg/: CMakeLists.txt  dstools.spec.in  gppkg_spec.yml.in  pdltools.spec.in
src/: CMakeLists.txt
src/config/: CMakeLists.txt  Modules.yml  Modules.yml.bkup  Ports.yml  SUgAR_version.yml
src/dspack/: CMakeLists.txt  configyml.py  dspack.py
src/modules/common/: common.c
src/modules/complex/: complex_type.c  complex_type.h  float_utils.h
src/modules/edit_distance/: edit_distance.c
src/modules/nlp/: PorterStemmer.c
src/modules/sampling/: sampling.c
src/modules/uri_utils/: Makefile  README.txt  uri_utils.c  uri_utils_help.html
src/pdlpack/: CMakeLists.txt  configyml.py  pdlpack.py
src/ports/: CMakeLists.txt
src/ports/greenplum/: CMakeLists.txt
src/ports/greenplum/cmake/: FindGreenplum.cmake  FindPostgreSQL.cmake  GreenplumUtils.cmake  PostgreSQLUtils.cmake
src/ports/greenplum/modules/anonymization/: anonymization.content  anonymization.sql_in
src/ports/greenplum/modules/anonymization/test/: test_anonymization.sql_in
src/ports/greenplum/modules/array_utilities/: array_utilities.sql_in  array_utilities.yml
src/ports/greenplum/modules/array_utilities/test/: test_array_utilities.sql_in
src/ports/greenplum/modules/balance_dataset/: balance_dataset.content  balance_dataset.sql_in  balance_dataset.yml
src/ports/greenplum/modules/balance_dataset/test/: test_balance_dataset.sql_in
src/ports/greenplum/modules/common/: common.content  udfs.sql_in
src/ports/greenplum/modules/complete_linkage/: complete_linkage.content  complete_linkage.sql_in
src/ports/greenplum/modules/complete_linkage/test/: test_complete_linkage.sql_in
src/ports/greenplum/modules/complex/: complex.content  complex.yml  complex_type.sql_in
src/ports/greenplum/modules/complex/test/: test_complex_type.sql_in
src/ports/greenplum/modules/data_imputation/: data_imputation.content  data_imputation.sql_in
src/ports/greenplum/modules/data_imputation/test/: test_data_impute.sql_in
src/ports/greenplum/modules/data_imputation_new/: data_imputation.content
src/ports/greenplum/modules/data_imputation_new/test/: test_data_impute.sql_in
src/ports/greenplum/modules/distance_metrics/: kl_div.content  kl_div.sql_in
src/ports/greenplum/modules/distance_metrics/test/: test_kl_div.sql_in
src/ports/greenplum/modules/edit_distance/: edit_distance.content  edit_distance.sql_in
src/ports/greenplum/modules/edit_distance/test/: test_edit_distance.sql_in
src/ports/greenplum/modules/generic_utilities/: array_utilities.content  array_utilities.sql_in  generic_utilities.content  generic_utilities.sql_in  generic_utilities.yml
src/ports/greenplum/modules/generic_utilities/test/: generic_utilities.sql_in  test_array_utilities.sql_in
src/ports/greenplum/modules/grid_search/: grid_search.content  grid_search.sql_in  grid_search.yml
src/ports/greenplum/modules/hits/: hits.content  hits.sql_in
src/ports/greenplum/modules/kd_tree/: kd_tree.content  kd_tree.sql_in  kd_tree.yml
src/ports/greenplum/modules/nlp/: porter_stemmer.sql_in
src/ports/greenplum/modules/normalized_cut/: normalized_cut.content  normalized_cut.sql_in  normalized_cut.yml
src/ports/greenplum/modules/one_vs_rest/: one_vs_rest.content  one_vs_rest_data_prep.sql_in
src/ports/greenplum/modules/pagerank/: pagerank.content  pagerank.sql_in  pagerank.yml
src/ports/greenplum/modules/plr_placeholder/: plr_placeholder.yml  plr_sample.sql_in
src/ports/greenplum/modules/prediction_metrics/: prediction_metrics.content  prediction_metrics.sql_in
src/ports/greenplum/modules/sampling/: sampling.content  sampling.sql_in  sampling.yml
src/ports/greenplum/modules/session/: session.content  session.sql_in
src/ports/greenplum/modules/stemming/: porter_stemmer.sql_in  stemming.content  stemming.yml
src/ports/greenplum/modules/sugar/: sugar.content  sugar.sql_in  sugar.yml
src/ports/greenplum/modules/uri_utils/: uri_utils.content  uri_utils.sql_in  uri_utils.yml
src/ports/hawq/: CMakeLists.txt
src/ports/hawq/1.2/config/: CMakeLists.txt  Modules.yml
src/ports/hawq/1.3/config/: CMakeLists.txt  Modules.yml
src/ports/hawq/2.0/config/: CMakeLists.txt  Modules.yml
src/ports/hawq/cmake/: FindHAWQ.cmake
src/ports/postgres/modules/uri_utils/: uri_utils.sql_in
src/utils/: lib_contents.py
(+205 files in other folders)
